fixed footer, adjusted formatting, about me text wrap is still elusive to me

--- a/style.css
+++ b/style.css
@@ -13,30 +13,25 @@ nav { /*navigation bar*/
     color: black;
 }
 
-.nav-link {
+.nav-link { /*navbar links*/
     color:black;
 }
 
-body { 
+body { /*background image for whole site*/
     background-image: url(imgs/cracked-background.png);
     width:auto;
     height: auto;
 }
 
-footer {
-    background-color: black;
-    color: white;
-    width: 100%;
-
-}
-
 /*-----ABOUT ME/HOME PAGE STYLES--------*/
 
-main header h1 {
+#about-me-title { /*about me title*/
+    padding: 20px;
     padding-left: 20px;
 }
+
 figure .card-img { /*headshot*/
-    position:relative;
+    position: relative;
     max-width: 414px;
     height: auto;
     padding-right:20px;
@@ -44,8 +39,6 @@ figure .card-img { /*headshot*/
 
 .mr-3, .mx-3 { /* spacing - check to see for what*/
     margin-right: 10px !important;
-    
-    
 }
 
 header { /*About Me title*/
@@ -56,7 +49,9 @@ header { /*About Me title*/
 main section .container {
     padding: 50px;
 }
+
 /*------PORTFOLIO PAGE STYLES--------*/
+
 #portfolio-head h1 { /*Portfolio title*/
     text-align: center;
     padding-top: 30px;
@@ -66,14 +61,14 @@ main section .container {
 
 li h3 { /*Artwork title*/
     font-size: 6vw;
-    padding-bottom: 10px;
 }
 
 
 #art-img { /*portrait img*/
     width: 70vw;
-    padding-top: 15px;
+    padding-top: 5px;
 }
+
 #text-1 { /* artwork text block responsiveness*/
     font-size: 3vw;
     padding: 10px;
@@ -110,20 +105,10 @@ li .h2 { /*headings for albums, responsive*/
     font-size: 4rem;
 }
 
-
-
-.card {
-    padding: 10px;
-    
-}
-
-    
 .card-text h5 {  /*album titles: artwork, theater, costume*/
    padding-left: 20px;
    padding-bottom:5px;
 }
-
-
 
 /*--------CONTACT PAGE STYLES---------------*/
 
@@ -134,6 +119,7 @@ form { /*contact form appearance format*/
     background-color: #e8e8e8;
     color: black;
 }
+
 .btn-default { /*submit button appearance*/
     background-color: black;
     color: white;
@@ -144,8 +130,15 @@ main .container { /*container background position*/
     padding: 50px;
 }
 
+footer { /*footer*/
+    background-color: black;
+    color: white;
+    text-align:center;
+    height: 60px;
+}
 
-
-
+#footer { /*footer text*/
+    padding-top: 15px;
+}
 
 
